--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,10 @@ subprojects {
         if ("com.android.build.gradle.AppPlugin" == plugin.class.name || "com.android.build.gradle.LibraryPlugin" == plugin.class.name) {
             android {
                 compileSdkVersion 29
-
+                defaultConfig {
+                    minSdkVersion 22
+                    targetSdkVersion 29
+                }
                 buildTypes {
                     release {
                         minifyEnabled false
